@@ -33,13 +33,13 @@ CD_APPLET_DEFINITION ("terminal", 1, 4, 7)
 
 
 CD_APPLET_INIT_BEGIN (erreur)
-	if (term.dialog && term.vterm) {
-	term_dialog_apply_settings(term.vterm);
-	}
+  if (term.dialog) {
+    term_tab_apply_settings();
+  }
 
-	CD_APPLET_REGISTER_FOR_CLICK_EVENT
-        CD_APPLET_REGISTER_FOR_MIDDLE_CLICK_EVENT
-	CD_APPLET_REGISTER_FOR_BUILD_MENU_EVENT
+  CD_APPLET_REGISTER_FOR_CLICK_EVENT
+  CD_APPLET_REGISTER_FOR_MIDDLE_CLICK_EVENT
+  CD_APPLET_REGISTER_FOR_BUILD_MENU_EVENT
 CD_APPLET_INIT_END
 
 
@@ -49,7 +49,7 @@ CD_APPLET_STOP_BEGIN
 /*     cairo_dock_isolate_dialog (term.dialog, FALSE); */
 /*   } */
 /*   term.dialog = NULL; */
-	CD_APPLET_UNREGISTER_FOR_CLICK_EVENT
-        CD_APPLET_UNREGISTER_FOR_MIDDLE_CLICK_EVENT
-	CD_APPLET_UNREGISTER_FOR_BUILD_MENU_EVENT
+  CD_APPLET_UNREGISTER_FOR_CLICK_EVENT
+  CD_APPLET_UNREGISTER_FOR_MIDDLE_CLICK_EVENT
+  CD_APPLET_UNREGISTER_FOR_BUILD_MENU_EVENT
 CD_APPLET_STOP_END
