@@ -35,7 +35,7 @@ CD_APPLET_ON_MIDDLE_CLICK_H
 CD_APPLET_ON_BUILD_MENU_H
 
 
-void term_dialog_apply_settings(GtkWidget *vterm);
+void term_tab_apply_settings();
 
 #endif
 
